--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-apollo": "^1.0.10",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "rebass": "^1.0.4"
   }
 }
